CustomAllocator runs on vector, list and map

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,34 +7,34 @@ project(CustomAllocator VERSION ${PROJECT_VESRION})
 
 configure_file(version.h.in version.h)
 
-add_executable(${PROJECT_NAME} main.cpp)
-add_library(CustomAllocator_lib CustomAllocator.cpp CustomAllocator.h)
+add_executable(${PROJECT_NAME} "main.cpp" "CustomAllocator.h")
+#add_library(CustomAllocator_lib "CustomAllocator.h")
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
-    CXX_STANDARD 17
+    CXX_STANDARD 14
     CXX_STANDARD_REQUIRED ON
 )
 
-set_target_properties(CustomAllocator_lib PROPERTIES
-    CXX_STANDARD 17
-    CXX_STANDARD_REQUIRED ON
-)
+#set_target_properties(CustomAllocator_lib PROPERTIES
+#    CXX_STANDARD 17
+#    CXX_STANDARD_REQUIRED ON
+#)
 
-target_include_directories(CustomAllocator_lib
-    PRIVATE "${CMAKE_BINARY_DIR}"
-)
+#target_include_directories(CustomAllocator_lib
+#    PRIVATE "${CMAKE_BINARY_DIR}"
+#)
 
-target_link_libraries(${PROJECT_NAME} PRIVATE
-    CustomAllocator_lib
-)
+#target_link_libraries(${PROJECT_NAME} PRIVATE
+#    CustomAllocator_lib
+#)
 
 if(MSVC)
     target_compile_options(${PROJECT_NAME} PRIVATE
         /W4
     )
-    target_compile_options(CustomAllocator_lib PRIVATE
-        /W4
-    )
+#    target_compile_options(CustomAllocator_lib PRIVATE
+#        /W4
+#    )
     #if(WITH_GTEST)
     #    target_compile_options(test_CustomAllocator PRIVATE
     #        /W4
@@ -43,11 +43,11 @@ if(MSVC)
 else ()
     target_compile_options(${PROJECT_NAME} PRIVATE
         -Wall
-        -Wextra -pedantic -Werror
+        #-Wextra -pedantic -Werror
     )
-    target_compile_options(CustomAllocator_lib PRIVATE
-        -Wall -Wextra -pedantic -Werror
-    )
+#    target_compile_options(CustomAllocator_lib PRIVATE
+#        -Wall -Wextra -pedantic -Werror
+#    )
     #if(WITH_GTEST)
     #    target_compile_options(test_CustomAllocator PRIVATE
     #        -Wall -Wextra -pedantic -Werror
