--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ set(PROJECT_VESRION 0.0.${PATCH_VERSION})
 
 project(CustomAllocator VERSION ${PROJECT_VESRION})
 
+option(WITH_GTEST "Whether to build google test" ON)
+
 configure_file(version.h.in version.h)
 
 add_executable(${PROJECT_NAME} "main.cpp" "CustomAllocator.h")
@@ -28,6 +30,27 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
 #    CustomAllocator_lib
 #)
 
+if(WITH_GTEST)
+    add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/googletest" "googletest")
+    add_executable(test_allocator "test_allocator.cpp")
+
+    target_include_directories(test_allocator PRIVATE
+        ${GTEST_INCLUDE_DIRS}
+        "${CMAKE_CURRENT_SOURCE_DIR}/src"
+    )
+
+    set_target_properties(test_allocator PROPERTIES
+        CXX_STANDARD 14
+        CXX_STANDARD_REQUIRED ON
+    )
+
+    target_link_libraries(test_allocator PRIVATE
+        ${GTEST_BOTH_LIBRARIES}
+        gtest
+        gtest_main
+    )
+endif()
+
 if(MSVC)
     target_compile_options(${PROJECT_NAME} PRIVATE
         /W4
@@ -35,11 +58,11 @@ if(MSVC)
 #    target_compile_options(CustomAllocator_lib PRIVATE
 #        /W4
 #    )
-    #if(WITH_GTEST)
-    #    target_compile_options(test_CustomAllocator PRIVATE
-    #        /W4
-    #    )
-    #endif()
+    if(WITH_GTEST)
+        target_compile_options(test_allocator PRIVATE
+            /W4
+        )
+    endif()
 else ()
     target_compile_options(${PROJECT_NAME} PRIVATE
         -Wall
@@ -48,11 +71,11 @@ else ()
 #    target_compile_options(CustomAllocator_lib PRIVATE
 #        -Wall -Wextra -pedantic -Werror
 #    )
-    #if(WITH_GTEST)
-    #    target_compile_options(test_CustomAllocator PRIVATE
-    #        -Wall -Wextra -pedantic -Werror
-    #    )
-    #endif()
+    if(WITH_GTEST)
+        target_compile_options(test_allocator PRIVATE
+            -Wall -Wextra -pedantic -Werror
+        )
+    endif()
 endif()
 
 install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
@@ -63,3 +86,9 @@ set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
 set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
 set(CPACK_PACKAGE_CONTACT divmy@yandex.ru)
 include(CPack)
+
+if(WITH_GTEST)
+    include(CTest)
+    enable_testing()
+    add_test(test_allocator test_allocator)
+endif()
