--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.2)
 
 set(PATCH_VERSION "2" CACHE INTERNAL "Patch version")
-set(PROJECT_VESRION 0.0.${PATCH_VERSION})
+set(PROJECT_VERSION 0.0.${PATCH_VERSION})
 
-project(CustomAllocator VERSION ${PROJECT_VESRION})
+project(CustomAllocator VERSION ${PROJECT_VERSION})
 
 option(WITH_GTEST "Whether to build google test" ON)
 
