--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
-      - run: cmake -S . -B ./Build -DPATCH_VERSION=${{ github.run_number }} -DWITH_GTEST=ON
-      - run: cmake --build ./Build
-      - run: cmake --build ./Build --target test
-      - run: cmake --build ./Build --target package
+      - run: cmake -S . -B ./Release -DPATCH_VERSION=${{ github.run_number }} -DWITH_GTEST=ON
+      - run: cmake --build ./Release
+      - run: cmake --build ./Release --target test
+      - run: cmake --build ./Release --target package
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
